fix: enhacement pipeline and video

--- a/pages/enhancement/build-faq-generator.mdx
+++ b/pages/enhancement/build-faq-generator.mdx
@@ -1,6 +1,6 @@
 import Collapse from '@/components/Collapse'
 
-# FAQ Generator for PDF Documents
+# Build FAQ Generator From PDF Document
 
 When building a knowledge base or documentation system, automatically extracting FAQs from PDF documents can significantly improve content accessibility and searchability. This recipe shows how to:
 - Extract structured Q&A pairs from PDF documents
