--- a/pages/enhancement/image-metadata-extraction-pipeline.mdx
+++ b/pages/enhancement/image-metadata-extraction-pipeline.mdx
@@ -1,11 +1,8 @@
 import Collapse from '@/components/Collapse'
 
-# Image Analysis Enhancement Pipeline
+# Image metadata extraction pipeline
 
-When working with images in your application, you need to automatically extract and structure metadata like colors, subjects, and resolution. This is essential for:
-- Building searchable image libraries
-- Creating intelligent image tagging systems
-- Automating image categorization
+When working with images in your application, you need to automatically extract and structure metadata like colors, subjects, and resolution.
 
 ```typescript copy
 import { BooleanField, NumberField, StringField, Unbody, IImageBlock } from "unbody";
