--- a/pages/prompting/use-the-image-inside-a-prompt.mdx
+++ b/pages/prompting/use-the-image-inside-a-prompt.mdx
@@ -52,4 +52,4 @@ When you need to analyze or generate from images, use message arrays with image 
 ```
 </Collapse>
 
-Learn more in our [Message-Based Input with Schema Guide](generative-api/json-gen#message-based-input-with-schema).
+Learn more in our [Generative Search Using Image as Input Guide](/content-api/generative#using-images-as-input).
