--- a/pages/working-with-images.mdx
+++ b/pages/working-with-images.mdx
@@ -197,7 +197,7 @@ const { data: { payload: images } } = await unbody.get
 </div>
 ```
 
-## Face Detection and Cropping with Imgix
+## Face Detection and Cropping Using `react-imgix`
 
 Intelligent face detection allows you to automatically center and crop images to highlight the most important part of a portrait.
 
@@ -220,7 +220,7 @@ const FaceCroppedImage = () => (
 
 ## Responsive Image Handling
 
-When you need to create responsive images that look great on devices from mobile phones to large desktop monitors, this approach ensures your images adapt seamlessly to different screen sizes and resolutions.
+When you need to create responsive images that look great on devices from mobile phones to large desktop monitors and ensure performance, this approach ensures your images adapt seamlessly to different screen sizes and resolutions.
 
 ```typescript copy
 const ResponsiveImage = () => {
