--- a/pages/content-api/search.mdx
+++ b/pages/content-api/search.mdx
@@ -1,9 +1,9 @@
-import {Callout} from "nextra/components";
+import { Callout } from "nextra/components";
 
 Unbody offers 5 various search method in two categories, so you can build any type of search engine for your data.
 
 <Callout>
-    We assume that you have already read and learn about how to setup unbody project and also learn about the basics how to make request calls to Unbody API. If not please go to [getting started](/get-started) and have make sure you have followed all the steps.
+    We assume that you have already read and learn about how to setup unbody project and also learn about the basics how to make request calls to Unbody API. If not please go to [First Project](/first-project) and have make sure you have followed all the steps.
 </Callout>
 
 ### Search
