fix: minor issues

--- a/pages/content-api/authentication.mdx
+++ b/pages/content-api/authentication.mdx
@@ -23,7 +23,7 @@ Below are examples of how to authenticate in different environments:
         ```ts
         import { Unbody } from 'unbody';
 
-        const u = new Unbody({
+        const unbody = new Unbody({
             apiKey: "<API_KEY>",
             projectId: "<PROJECT_ID>",
         });
