--- a/pages/enhancement/build-faq-generator.mdx
+++ b/pages/enhancement/build-faq-generator.mdx
@@ -120,8 +120,7 @@ const { data: { payload } } = await unbody.get
   .exec();
 ```
 
-## Expected Output
-
+<Collapse title="Response">
 ```json
 [
   {
@@ -131,6 +130,7 @@ const { data: { payload } } = await unbody.get
   }
 ]
 ```
+</Collapse>
 
 ## Related Resources
 - [Enhancement Pipeline Documentation](/project-configurations/enhancers)
